--- a/cita - banner - demo.html
+++ b/cita - banner - demo.html
@@ -7,26 +7,26 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>Maintenance</title>
+    <title>CITA</title>
     <style>
         body {
             text-align: center;
             padding: 150px;
         }
 
-        h1 {
+        /* h1 {
             font-size: 50px;
-        }
+        } */
 
         body {
             font: 20px Helvetica, sans-serif;
             color: #333;
         }
 
-        .cont {
+        /* .cont {
             max-width: 650px;
             margin: 0 auto;
-        }
+        } */
     </style>
 </head>
 
@@ -35,14 +35,8 @@
 <body>
     <div class="container">
         <div class="text-justify cont">
-            <h1 id="title">We'll be back soon!</h1>
-            <div>
-                <p id="text">Our website is currently undergoing scheduled system maintenance from 6:00 PM of 27th July,
-                    until 8:00 PM of 27th July. We apologize for the inconvenience. In the meantime, you may still chat
-                    with Bessie, our Chatbot, on Facebook Messenger, contact your Bancassurance Sales Executive, or send
-                    us an e-mail via BPIAIA.customerservice@aia.com for your policy needs and inquiries during this
-                    time.</p>
-            </div>
+            <!-- <h1 id="image">We'll be back soon!</h1> -->
+            <img src="image1.jpg" id="banner_image" />
         </div>
     </div>
 
@@ -55,11 +49,12 @@
         //         let title = str1.split("&text")[0];
         //         let text = str2;
 
-        let title = decodeURIComponent(str1.split("&image")[0]);
+        let image = decodeURIComponent(str1.split("&image")[0]);
         let text = decodeURIComponent(str2);
         //         text = text.replace("&frameId", "");
 
-        document.getElementById("image").innerHTML = title;
+        // document.getElementById("image").innerHTML = title;
+        document.getElementById("banner_image").src = image;
         document.getElementById("text").innerHTML = text;
     </script>
 
