--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
     <div class="container">
         <h2>Login</h2>
         <form id="loginForm"
-            onsubmit="event.preventDefault(); validateCredentials(); sendEventToYM(); sendAPIRequest();">
+            onsubmit="event.preventDefault(); validateCredentials(); sendEventToYM();">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="submit" value="Login">
