--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 event_code: "ym-client-event",
                 data: JSON.stringify({
                     event: {
-                        code: this.e_code,
-                        data: this.e_data
+                        code: e_code,
+                        data: e_data
                     },
                 }),
             }), "*");
