--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="${img}" class="img-fluid" />
         </div>
         <div class="container">
-            <button type="button" class="btn btn-primary btn-lg" onclick="addProduct(${e_code},${e_data})">Add Product</button>
+            <button type="button" class="btn btn-primary btn-lg" onclick="addProduct('${e_code}','${e_data}')">Add Product</button>
         </div>`;
         }
 
